[gd_scene load_steps=6 format=2]

[ext_resource path="res://actors/tongue.gd" type="Script" id=1]
[ext_resource path="res://sprites/target.png" type="Texture" id=2]
[ext_resource path="res://audio/slurp.wav" type="AudioStream" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.334906, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.559531, 0.559531, 0, 0 ]

[sub_resource type="CircleShape2D" id=2]
radius = 32.9848

[node name="Tongue" type="Line2D"]
width_curve = SubResource( 1 )
default_color = Color( 0.776471, 0.0745098, 0.0745098, 1 )
script = ExtResource( 1 )

[node name="target" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="target"]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="target/Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="slurpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="target/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="target/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
